--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,9 +19,53 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<script src="https://kit.fontawesome.com/c3c33cab05.js"></script>
+
 <!--===============================================================================================-->
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/"><i class="fas fa-hand-peace" style="margin-right:10px"></i>BunkIt</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#">Link</a>
+      </li>
+    </ul>
+      <ul class="nav justify-content-end">
+      <%if(!currentUser){%>
+      <li class="nav-item">
+        <a class="nav-link btn btn-dark" style="margin-right:10px" href="login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-dark" href="/register">Sign Up</a>
+      </li>
+      <%}else{%>
+      <li class="nav-item">
+        <a class="nav-link btn btn-dark" href="/logout">Sign Out</a>
+      </li>
+      <%}%>
+      </ul>
+  </div>
+</nav>
+<div class="container">
+  <%if(error && error.length>0){%>
+  <div class="alert alert-danger" style="margin-top:10px" role="alert">
+      <%=error%>
+    </div>
+    <%}%>
+    <%if(success && success.length>0){%>
+  <div class="alert alert-success" style="margin-top:10px" role="alert">
+      <%=success%>
+    </div>
+    <%}%> 
 	
 	<div class="limiter">
 		<div class="container-login100">
