non functional home page added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,3 +52,9 @@
       <%=success%>
     </div>
     <%}%> 
+    <%if(damn && damn.length>0){%>
+  <div class="alert alert-danger" style="margin-top:10px" role="alert">
+      <%=damn%>
+    </div>
+    <%}%> 
+  </div>
