--- a/views/register.ejs
+++ b/views/register.ejs
@@ -66,6 +66,12 @@
       <%=success%>
     </div>
     <%}%> 
+		<%if(damn && damn.length>0){%>
+  <div class="alert alert-danger" style="margin-top:10px" role="alert">
+      <%=damn%>
+    </div>
+    <%}%> 
+		</div>
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
