Added subject support

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 .register{
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    background-image: url("https://cdn130.picsart.com/253349275017202.jpg?r1024x1024");
     margin-top: 3%;
     padding: 3%;
 }
