--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,9 +14,10 @@
 <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Teacher</th>
+        <th>Present</th>
+        <th>Total</th>
+        <th>Percentage</th>
       </tr>
     </thead>
     <tbody>
@@ -24,6 +25,7 @@
         <td>John</td>
         <td>Doe</td>
         <td>john@example.com</td>
+        <td>100%</td>
       </tr>
     </tbody>
   </table>
