--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,76 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>BunkIt</title>
 	<meta charset="UTF-8">
-		<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->	
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://kit.fontawesome.com/c3c33cab05.js"></script>
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"><i class="fas fa-hand-peace" style="margin-right:10px"></i>BunkIt</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-light" href="#">Link</a>
-      </li>
-    </ul>
-      <ul class="nav justify-content-end">
-      <%if(!currentUser){%>
-      <li class="nav-item">
-        <a class="nav-link btn btn-dark" style="margin-right:10px" href="login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-dark" href="/register">Sign Up</a>
-      </li>
-      <%}else{%>
-      <li class="nav-item">
-        <a class="nav-link btn btn-dark" href="/logout">Sign Out</a>
-      </li>
-      <%}%>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="/"><i class="fas fa-hand-peace" style="margin-right:10px"></i>BunkIt</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link text-light" href="/welcome">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-light" href="/subject">Add subject</a>
+				</li>
+			</ul>
+			<ul class="nav justify-content-end">
+				<%if(!currentUser){%>
+				<li class="nav-item">
+					<a class="nav-link btn btn-dark" style="margin-right:10px" href="login">Login</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link btn btn-dark" href="/register">Sign Up</a>
+				</li>
+				<%}else{%>
+				<li class="nav-item">
+					<a class="nav-link btn btn-dark" href="/logout">Sign Out</a>
+				</li>
+				<%}%>
       </ul>
   </div>
 </nav>
 <div class="container">
   <%if(error && error.length>0){%>
-  <div class="alert alert-danger" style="margin-top:10px" role="alert">
-      <%=error%>
-    </div>
-    <%}%>
+				<div class="alert alert-danger" style="margin-top:10px" role="alert">
+					<%=error%>
+				</div>
+				<%}%>
     <%if(success && success.length>0){%>
-  <div class="alert alert-success" style="margin-top:10px" role="alert">
-      <%=success%>
-    </div>
-    <%}%> 
+				<div class="alert alert-success" style="margin-top:10px" role="alert">
+					<%=success%>
+				</div>
+				<%}%> 
 		<%if(damn && damn.length>0){%>
-  <div class="alert alert-danger" style="margin-top:10px" role="alert">
-      <%=damn%>
-    </div>
-    <%}%> 
+				<div class="alert alert-danger" style="margin-top:10px" role="alert">
+					<%=damn%>
+				</div>
+				<%}%> 
 		</div>
 	<div class="limiter">
 		<div class="container-login100">
