--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,32 +4,35 @@
 <div class="container register">
     <div class="row">
         <div class="col-12 col-sm-12 col-lg-3 register-left">
-            <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+            <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
             <h3>Welcome</h3>
             <p>You are 30 seconds away from your own attendence sheet!</p>
-            <a href="/login"><input type="submit" value="Login"/></a><br/>
+            <a href="/login"><input type="submit" value="Login" /></a><br />
         </div>
         <div class="col-12 col-sm-12 col-lg-9 register-right">
             <form class="row register-form" action="/welcome" method="POST">
                 <div class="col-12 col-sm-12 col-lg-6">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="First Name *" name="info[name]" value="" />
+                        <input type="text" class="form-control" placeholder="First Name *" name="info[name]"
+                            value="<%=user.username%>" />
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="College" value="" name="info[college]" />
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Branch *" value="" name="info[branch]" />
-                    </div>  
+                    </div>
                 </div>
                 <div class="col-12 col-sm-12 col-lg-6">
                     <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Your Email *" value="" name="info[email]" />
+                        <input type="email" class="form-control" placeholder="Your Email *" value="<%=user.email%>"
+                            name="info[email]" />
                     </div>
                     <div class="form-group">
-                        <input type="text" minlength="10" maxlength="10" class="form-control" placeholder="Your Phone *" value="" name="info[phone]"/>
+                        <input type="text" minlength="10" maxlength="10" class="form-control" placeholder="Your Phone *"
+                            value="" name="info[phone]" />
                     </div>
-                    <input type="submit" class="btnRegister"  value="Save Profile"/>
+                    <input type="submit" class="btnRegister" value="Save Profile" />
                 </div>
             </form>
         </div>
@@ -40,4 +43,5 @@
 
 
 </body>
+
 </html>
